wpp2trs/src/main/gen/WhileParser.java
// Generated from /home/mikhirurg/IdeaProjects/BachelorThesis/src/main/antlr4/While.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class WhileParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ASSIGN=1, SKIP_STM=2, PRINT_INT_STM=3, PRINT_STRING_STM=4, PRINT_BOOL_STM=5, 
		READ_INT_STM=6, READ_STRING_STM=7, READ_BOOL_STM=8, IF=9, THEN=10, ELSE=11, 
		WHILE=12, DO=13, SEMICOLON=14, INT_TYPE=15, BOOL_TYPE=16, STRING_TYPE=17, 
		PLUS=18, MINUS=19, MULT=20, DIV=21, MOD=22, INT=23, STRING=24, TRUE=25, 
		FALSE=26, NOT=27, AND=28, OR=29, EQ=30, LT=31, GT=32, LE=33, GE=34, LPAREN=35, 
		RPAREN=36, BLOCKCOMMENT=37, VAR=38, WS=39;
	public static final int
		RULE_prog = 0, RULE_stm = 1, RULE_nestedStm = 2, RULE_condition = 3, RULE_unaryStm = 4, 
		RULE_skipStm = 5, RULE_printIntStm = 6, RULE_printStringStm = 7, RULE_printBoolStm = 8, 
		RULE_readIntStm = 9, RULE_readStringStm = 10, RULE_readBoolStm = 11, RULE_ifStm = 12, 
		RULE_whileStm = 13, RULE_blockStm = 14, RULE_declareStm = 15, RULE_assignStm = 16, 
		RULE_expr = 17, RULE_untypedexpr = 18, RULE_typedexpr = 19, RULE_aexp = 20, 
		RULE_aexpatom = 21, RULE_bexp = 22, RULE_bexpatom = 23, RULE_strexpr = 24;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "stm", "nestedStm", "condition", "unaryStm", "skipStm", "printIntStm", 
			"printStringStm", "printBoolStm", "readIntStm", "readStringStm", "readBoolStm", 
			"ifStm", "whileStm", "blockStm", "declareStm", "assignStm", "expr", "untypedexpr", 
			"typedexpr", "aexp", "aexpatom", "bexp", "bexpatom", "strexpr"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "':='", "'skip'", "'printInt'", "'printString'", "'printBool'", 
			"'readInt'", "'readString'", "'readBool'", "'if'", "'then'", "'else'", 
			"'while'", "'do'", "';'", "'int'", "'bool'", "'string'", "'+'", "'-'", 
			"'*'", "'/'", "'%'", null, null, "'true'", "'false'", "'not'", "'and'", 
			"'or'", "'='", "'<'", "'>'", "'<='", "'>='", "'('", "')'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "ASSIGN", "SKIP_STM", "PRINT_INT_STM", "PRINT_STRING_STM", "PRINT_BOOL_STM", 
			"READ_INT_STM", "READ_STRING_STM", "READ_BOOL_STM", "IF", "THEN", "ELSE", 
			"WHILE", "DO", "SEMICOLON", "INT_TYPE", "BOOL_TYPE", "STRING_TYPE", "PLUS", 
			"MINUS", "MULT", "DIV", "MOD", "INT", "STRING", "TRUE", "FALSE", "NOT", 
			"AND", "OR", "EQ", "LT", "GT", "LE", "GE", "LPAREN", "RPAREN", "BLOCKCOMMENT", 
			"VAR", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "While.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public WhileParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgContext extends ParserRuleContext {
		public StmContext stm() {
			return getRuleContext(StmContext.class,0);
		}
		public TerminalNode EOF() { return getToken(WhileParser.EOF, 0); }
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WhileListener ) ((WhileListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WhileListener ) ((WhileListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WhileVisitor ) return ((WhileVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			stm(0);
			setState(51);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StmContext extends ParserRuleContext {
		public UnaryStmContext unaryStm() {
			return getRuleContext(UnaryStmContext.class,0);
		}
		public BlockStmContext blockStm() {
			return getRuleContext(BlockStmContext.class,0);
		}
		public List<StmContext> stm() {
			return getRuleContexts(StmContext.class);
		}
		public StmContext stm(int i) {
			return getRuleContext(StmContext.class,i);
		}
		public TerminalNode SEMICOLON() { return getToken(WhileParser.SEMICOLON, 0); }
		public StmContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stm; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WhileListener ) ((WhileListener)listener).enterStm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WhileListener ) ((WhileListener)listener).exitStm(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WhileVisitor ) return ((WhileVisitor<? extends T>)visitor).visitStm(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StmContext stm() throws RecognitionException {
		return stm(0);
	}

	private StmContext stm(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		StmContext _localctx = new StmContext(_ctx, _parentState);
		StmContext _prevctx = _localctx;
		int _startState = 2;
		enterRecursionRule(_localctx, 2, RULE_stm, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case SKIP_STM:
			case PRINT_INT_STM:
			case PRINT_STRING_STM:
			case PRINT_BOOL_STM:
			case READ_INT_STM:
			case READ_STRING_STM:
			case READ_BOOL_STM:
			case IF:
			case WHILE:
			case INT_TYPE:
			case BOOL_TYPE:
			case STRING_TYPE:
			case VAR:
				{
				setState(54);
				unaryStm();
				}
				break;
			case LPAREN:
				{
				setState(55);
				blockStm();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(63);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new StmContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_stm);
					setState(58);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(59);
					match(SEMICOLON);
					setState(60);
					stm(2);
					}
					} 
				}
				setState(65);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NestedStmContext extends ParserRuleContext {
		public UnaryStmContext unaryStm() {
			return getRuleContext(UnaryStmContext.class,0);
		}
		public BlockStmContext blockStm() {
			return getRuleContext(BlockStmContext.class,0);
		}
		public NestedStmContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nestedStm; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WhileListener ) ((WhileListener)listener).enterNestedStm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WhileListener ) ((WhileListener)listener).exitNestedStm(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WhileVisitor ) return ((WhileVisitor<? extends T>)visitor).visitNestedStm(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NestedStmContext nestedStm() throws RecognitionException {
		NestedStmContext _localctx = new NestedStmContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_nestedStm);
		try {
			setState(68);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case SKIP_STM:
			case PRINT_INT_STM:
			case PRINT_STRING_STM:
			case PRINT_BOOL_STM:
			case READ_INT_STM:
			case READ_STRING_STM:
			case READ_BOOL_STM:
			case IF:
			case WHILE:
			case INT_TYPE:
			case BOOL_TYPE:
			case STRING_TYPE:
			case VAR:
				enterOuterAlt(_localctx, 1);
				{
				setState(66);
				unaryStm();
				}
				break;
			case LPAREN:
				enterOuterAlt(_localctx, 2);
				{
				setState(67);
				blockStm();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ConditionContext extends ParserRuleContext {
		public BexpContext bexp() {
			return getRuleContext(BexpContext.class,0);
		}
		public ConditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WhileListener ) ((WhileListener)listener).enterCondition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WhileListener ) ((WhileListener)listener).exitCondition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WhileVisitor ) return ((WhileVisitor<? extends T>)visitor).visitCondition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConditionContext condition() throws RecognitionException {
		ConditionContext _localctx = new ConditionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_condition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			bexp(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UnaryStmContext extends ParserRuleContext {
		public SkipStmContext skipStm() {
			return getRuleContext(SkipStmContext.class,0);
		}
		public DeclareStmContext declareStm() {
			return getRuleContext(DeclareStmContext.class,0);
		}
		public PrintIntStmContext printIntStm() {
			return getRuleContext(PrintIntStmContext.class,0);
		}
		public PrintStringStmContext printStringStm() {
			return getRuleContext(PrintStringStmContext.class,0);
		}
		public PrintBoolStmContext printBoolStm() {
			return getRuleContext(PrintBoolStmContext.class,0);
		}
		public ReadIntStmContext readIntStm() {
			return getRuleContext(ReadIntStmContext.class,0);
		}
		public ReadStringStmContext readStringStm() {
			return getRuleContext(ReadStringStmContext.class,0);
		}
		public ReadBoolStmContext readBoolStm() {
			return getRuleContext(ReadBoolStmContext.class,0);
		}
		public IfStmContext ifStm() {
			return getRuleContext(IfStmContext.class,0);
		}
		public WhileStmContext whileStm() {
			return getRuleContext(WhileStmContext.class,0);
		}
		public AssignStmContext assignStm() {
			return getRuleContext(AssignStmContext.class,0);
		}
		public UnaryStmContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unaryStm; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WhileListener ) ((WhileListener)listener).enterUnaryStm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WhileListener ) ((WhileListener)listener).exitUnaryStm(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WhileVisitor ) return ((WhileVisitor<? extends T>)visitor).visitUnaryStm(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UnaryStmContext unaryStm() throws RecognitionException {
		UnaryStmContext _localctx = new UnaryStmContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_unaryStm);
		try {
			setState(83);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case SKIP_STM:
				enterOuterAlt(_localctx, 1);
				{
				setState(72);
				skipStm();
				}
				break;
			case INT_TYPE:
			case BOOL_TYPE:
			case STRING_TYPE:
				enterOuterAlt(_localctx, 2);
				{
				setState(73);
				declareStm();
				}
				break;
			case PRINT_INT_STM:
				enterOuterAlt(_localctx, 3);
				{
				setState(74);
				printIntStm();
				}
				break;
			case PRINT_STRING_STM:
				enterOuterAlt(_localctx, 4);
				{
				setState(75);
				printStringStm();
				}
				break;
			case PRINT_BOOL_STM:
				enterOuterAlt(_localctx, 5);
				{
				setState(76);
				printBoolStm();
				}
				break;
			case READ_INT_STM:
				enterOuterAlt(_localctx, 6);
				{
				setState(77);
				readIntStm();
				}
				break;
			case READ_STRING_STM:
				enterOuterAlt(_localctx, 7);
				{
				setState(78);
				readStringStm();
				}
				break;
			case READ_BOOL_STM:
				enterOuterAlt(_localctx, 8);
				{
				setState(79);
				readBoolStm();
				}
				break;
			case IF:
				enterOuterAlt(_localctx, 9);
				{
				setState(80);
				ifStm();
				}
				break;
			case WHILE:
				enterOuterAlt(_localctx, 10);
				{
				setState(81);
				whileStm();
				}
				break;
			case VAR:
				enterOuterAlt(_localctx, 11);
				{
				setState(82);
				assignStm();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SkipStmContext extends ParserRuleContext {
		public TerminalNode SKIP_STM() { return getToken(WhileParser.SKIP_STM, 0); }
		public SkipStmContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_skipStm; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WhileListener ) ((WhileListener)listener).enterSkipStm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WhileListener ) ((WhileListener)listener).exitSkipStm(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WhileVisitor ) return ((WhileVisitor<? extends T>)visitor).visitSkipStm(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SkipStmContext skipStm() throws RecognitionException {
		SkipStmContext _localctx = new SkipStmContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_skipStm);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			match(SKIP_STM);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PrintIntStmContext extends ParserRuleContext {
		public TerminalNode PRINT_INT_STM() { return getToken(WhileParser.PRINT_INT_STM, 0); }
		public TerminalNode LPAREN() { return getToken(WhileParser.LPAREN, 0); }
		public AexpContext aexp() {
			return getRuleContext(AexpContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(WhileParser.RPAREN, 0); }
		public PrintIntStmContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_printIntStm; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WhileListener ) ((WhileListener)listener).enterPrintIntStm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WhileListener ) ((WhileListener)listener).exitPrintIntStm(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WhileVisitor ) return ((WhileVisitor<? extends T>)visitor).visitPrintIntStm(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrintIntStmContext printIntStm() throws RecognitionException {
		PrintIntStmContext _localctx = new PrintIntStmContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_printIntStm);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			match(PRINT_INT_STM);
			setState(88);
			match(LPAREN);
			setState(89);
			aexp(0);
			setState(90);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PrintStringStmContext extends ParserRuleContext {
		public TerminalNode PRINT_STRING_STM() { return getToken(WhileParser.PRINT_STRING_STM, 0); }
		public TerminalNode LPAREN() { return getToken(WhileParser.LPAREN, 0); }
		public StrexprContext strexpr() {
			return getRuleContext(StrexprContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(WhileParser.RPAREN, 0); }
		public PrintStringStmContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_printStringStm; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WhileListener ) ((WhileListener)listener).enterPrintStringStm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WhileListener ) ((WhileListener)listener).exitPrintStringStm(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WhileVisitor ) return ((WhileVisitor<? extends T>)visitor).visitPrintStringStm(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrintStringStmContext printStringStm() throws RecognitionException {
		PrintStringStmContext _localctx = new PrintStringStmContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_printStringStm);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			match(PRINT_STRING_STM);
			setState(93);
			match(LPAREN);
			setState(94);
			strexpr();
			setState(95);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PrintBoolStmContext extends ParserRuleContext {
		public TerminalNode PRINT_BOOL_STM() { return getToken(WhileParser.PRINT_BOOL_STM, 0); }
		public TerminalNode LPAREN() { return getToken(WhileParser.LPAREN, 0); }
		public BexpContext bexp() {
			return getRuleContext(BexpContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(WhileParser.RPAREN, 0); }
		public PrintBoolStmContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_printBoolStm; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WhileListener ) ((WhileListener)listener).enterPrintBoolStm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WhileListener ) ((WhileListener)listener).exitPrintBoolStm(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WhileVisitor ) return ((WhileVisitor<? extends T>)visitor).visitPrintBoolStm(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrintBoolStmContext printBoolStm() throws RecognitionException {
		PrintBoolStmContext _localctx = new PrintBoolStmContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_printBoolStm);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			match(PRINT_BOOL_STM);
			setState(98);
			match(LPAREN);
			setState(99);
			bexp(0);
			setState(100);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ReadIntStmContext extends ParserRuleContext {
		public TerminalNode READ_INT_STM() { return getToken(WhileParser.READ_INT_STM, 0); }
		public TerminalNode LPAREN() { return getToken(WhileParser.LPAREN, 0); }
		public TerminalNode VAR() { return getToken(WhileParser.VAR, 0); }
		public TerminalNode RPAREN() { return getToken(WhileParser.RPAREN, 0); }
		public ReadIntStmContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_readIntStm; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WhileListener ) ((WhileListener)listener).enterReadIntStm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WhileListener ) ((WhileListener)listener).exitReadIntStm(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WhileVisitor ) return ((WhileVisitor<? extends T>)visitor).visitReadIntStm(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ReadIntStmContext readIntStm() throws RecognitionException {
		ReadIntStmContext _localctx = new ReadIntStmContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_readIntStm);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(READ_INT_STM);
			setState(103);
			match(LPAREN);
			setState(104);
			match(VAR);
			setState(105);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ReadStringStmContext extends ParserRuleContext {
		public TerminalNode READ_STRING_STM() { return getToken(WhileParser.READ_STRING_STM, 0); }
		public TerminalNode LPAREN() { return getToken(WhileParser.LPAREN, 0); }
		public TerminalNode VAR() { return getToken(WhileParser.VAR, 0); }
		public TerminalNode RPAREN() { return getToken(WhileParser.RPAREN, 0); }
		public ReadStringStmContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_readStringStm; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WhileListener ) ((WhileListener)listener).enterReadStringStm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WhileListener ) ((WhileListener)listener).exitReadStringStm(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WhileVisitor ) return ((WhileVisitor<? extends T>)visitor).visitReadStringStm(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ReadStringStmContext readStringStm() throws RecognitionException {
		ReadStringStmContext _localctx = new ReadStringStmContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_readStringStm);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			match(READ_STRING_STM);
			setState(108);
			match(LPAREN);
			setState(109);
			match(VAR);
			setState(110);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ReadBoolStmContext extends ParserRuleContext {
		public TerminalNode READ_BOOL_STM() { return getToken(WhileParser.READ_BOOL_STM, 0); }
		public TerminalNode LPAREN() { return getToken(WhileParser.LPAREN, 0); }
		public TerminalNode VAR() { return getToken(WhileParser.VAR, 0); }
		public TerminalNode RPAREN() { return getToken(WhileParser.RPAREN, 0); }
		public ReadBoolStmContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_readBoolStm; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WhileListener ) ((WhileListener)listener).enterReadBoolStm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WhileListener ) ((WhileListener)listener).exitReadBoolStm(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WhileVisitor ) return ((WhileVisitor<? extends T>)visitor).visitReadBoolStm(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ReadBoolStmContext readBoolStm() throws RecognitionException {
		ReadBoolStmContext _localctx = new ReadBoolStmContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_readBoolStm);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			match(READ_BOOL_STM);
			setState(113);
			match(LPAREN);
			setState(114);
			match(VAR);
			setState(115);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
